fix: more contrast for prominent links

--- a/public/style.css
+++ b/public/style.css
@@ -160,7 +160,7 @@ a.prominent-link {
   margin-top: 1rem;
   text-decoration: none;
   justify-items: stretch;
-  background-color: rgba(255, 255, 255, 0.1);
+  background-color: rgba(255, 255, 255, 0.05);
   border: 1px solid rgba(255, 255, 255, 0.1);
   align-items: center;
   font-size: 1rem;
